[package]
name = "dicom-web"
version = "0.2.3"
authors = ["Stephan Vedder <stephan.vedder@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A high-level API for accessing DICOMweb resources"
keywords = ["dicom", "web", "client", "http"]
readme = "README.md"

[[bin]]
name = "dicom-web"
path = "src/bin/dicom-web.rs"
required-features = ["cli"]

[dependencies]
dicom-core = "0.8.2"
dicom-json = "0.8.2"
dicom-object = "0.8.2"
futures-util = "0.3.31"
mediatype = "0.19.20"
multipart-rs = "0.2.1"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
snafu = "0.8.9"

[dependencies.clap]
version = "4.5.48"
optional = true
features = ["cargo", "derive"]

[dependencies.dicom-dump]
version = "0.8.1"
optional = true

[dependencies.tokio]
version = "1.47.1"
optional = true
features = ["macros", "rt-multi-thread"]

[dependencies.tracing]
version = "0.1.41"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.20"
optional = true

[dev-dependencies]
dicom-dictionary-std = "0.8.1"
tokio = { version = "1.47.1", features = ["macros"] }
wiremock = "0.6.5"

[features]
# enable command line tools
cli = [
  "dep:clap",
  "dep:dicom-dump",
  "dep:tokio",
  "dep:tracing",
  "dep:tracing-subscriber",
]
