[package]
name = "dicom-web"
version = "0.5.0"
authors = ["Stephan Vedder <stephan.vedder@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A high-level API for accessing DICOMweb resources"
keywords = ["dicom", "web", "client", "http"]
readme = "README.md"

[[bin]]
name = "dicom-web"
path = "src/bin/dicom-web.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.60", features = ["cargo", "derive"], optional = true }
dicom-core = "0.9.0"
dicom-dump = { version = "0.9.0", optional = true }
dicom-json = "0.9.0"
dicom-object = "0.9.0"
futures-util = "0.3.32"
mediatype = "0.21.0"
multipart-rs = "0.2.1"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "stream",
  "rustls",
  "http2",
  "query"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
snafu = "0.9.0"
tokio = { version = "1.50.0", features = [
  "macros",
  "rt-multi-thread",
], optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }
uuid = { version = "1.21.0", features = ["v4"], optional = true }

[dev-dependencies]
dicom-dictionary-std = "0.9.0"
test-log = "0.2.19"
tokio = { version = "1.50.0", features = ["macros"] }
wiremock = "0.6.5"

[features]
# enable command line tools
cli = [
  "dep:clap",
  "dep:dicom-dump",
  "dep:tokio",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:uuid",
]
